--- a/nicepage.css
+++ b/nicepage.css
@@ -38581,14 +38581,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-1 tr:nth-child(even)
         {
             color: #111111;
-            background-color: #ffc52f;
+            background-color: #feb908;
         }
 
         .u-button-style.u-custom-color-1,
         .u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #ffc52f !important;
+            background-color: #feb908 !important;
         }
 
         .u-button-style.u-custom-color-1:hover,
@@ -38603,7 +38603,7 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > .u-button-style.u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #ffbd11 !important;
+            background-color: #eba901 !important;
         }
 
         .u-hover-custom-color-1:hover,
@@ -38628,11 +38628,11 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-active-custom-color-1[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #ffc52f !important;
+            background-color: #feb908 !important;
         }
 
         a.u-link.u-hover-custom-color-1:hover {
-            color: #ffc52f !important;
+            color: #feb908 !important;
         }
 
         
@@ -38768,19 +38768,85 @@ a.u-link.u-text-hover-grey-90:hover {
         }
 
         
+        
+        .u-custom-color-4,
+        .u-body.u-custom-color-4,
+        section.u-custom-color-4:before,
+        .u-custom-color-4 > .u-container-layout:before,
+        .u-custom-color-4 > .u-inner-container-layout:before,
+        .u-custom-color-4.u-sidenav:before,
+        .u-container-layout.u-container-layout.u-custom-color-4:before,
+        .u-table-alt-custom-color-4 tr:nth-child(even)
+        {
+            color: #111111;
+            background-color: #ffc633;
+        }
+
+        .u-button-style.u-custom-color-4,
+        .u-button-style.u-custom-color-4[class*="u-border-"]
+        {
+            color: #111111 !important;
+            background-color: #ffc633 !important;
+        }
+
+        .u-button-style.u-custom-color-4:hover,
+        .u-button-style.u-custom-color-4[class*="u-border-"]:hover,
+        .u-button-style.u-custom-color-4:focus,
+        .u-button-style.u-custom-color-4[class*="u-border-"]:focus,
+        .u-button-style.u-button-style.u-custom-color-4:active,
+        .u-button-style.u-button-style.u-custom-color-4[class*="u-border-"]:active,
+        .u-button-style.u-button-style.u-custom-color-4.active,
+        .u-button-style.u-button-style.u-custom-color-4[class*="u-border-"].active,
+        li.active > .u-button-style.u-button-style.u-custom-color-4,
+        li.active > .u-button-style.u-button-style.u-custom-color-4[class*="u-border-"]
+        {
+            color: #111111 !important;
+            background-color: #ffbd14 !important;
+        }
+
+        .u-hover-custom-color-4:hover,
+        .u-hover-custom-color-4[class*="u-border-"]:hover,
+        .u-hover-custom-color-4:focus,
+        .u-hover-custom-color-4[class*="u-border-"]:focus,
+        .u-active-custom-color-4.u-active.u-active,
+        .u-active-custom-color-4[class*="u-border-"].u-active.u-active,
+        a.u-button-style.u-hover-custom-color-4:hover,
+        a.u-button-style.u-hover-custom-color-4[class*="u-border-"]:hover,
+        a.u-button-style:hover > .u-hover-custom-color-4,
+        a.u-button-style:hover > .u-hover-custom-color-4[class*="u-border-"],
+        a.u-button-style.u-hover-custom-color-4:focus,
+        a.u-button-style.u-hover-custom-color-4[class*="u-border-"]:focus,
+        a.u-button-style.u-button-style.u-active-custom-color-4:active,
+        a.u-button-style.u-button-style.u-active-custom-color-4[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-active-custom-color-4.active,
+        a.u-button-style.u-button-style.u-active-custom-color-4[class*="u-border-"].active,
+        a.u-button-style.u-button-style.active > .u-active-custom-color-4,
+        a.u-button-style.u-button-style.active > .u-active-custom-color-4[class*="u-border-"],
+        li.active > a.u-button-style.u-button-style.u-active-custom-color-4,
+        li.active > a.u-button-style.u-button-style.u-active-custom-color-4[class*="u-border-"]
+        {
+            color: #111111 !important;
+            background-color: #ffc633 !important;
+        }
+
+        a.u-link.u-hover-custom-color-4:hover {
+            color: #ffc633 !important;
+        }
+
+        
 
         
         .u-border-custom-color-1,
         .u-separator-custom-color-1:after
         {
-            border-color: #ffc52f;
-            stroke: #ffc52f;
+            border-color: #feb908;
+            stroke: #feb908;
         }
 
         .u-button-style.u-border-custom-color-1
         {
-            border-color: #ffc52f !important;
-            color: #ffc52f !important;
+            border-color: #feb908 !important;
+            color: #feb908 !important;
             background-color: transparent !important;
         }
 
@@ -38788,7 +38854,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-border-custom-color-1:focus
         {
             border-color: transparent !important;
-            color: #ffbd11 !important;
+            color: #eba901 !important;
             background-color: transparent !important;
         }
 
@@ -38803,18 +38869,18 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.active > .u-border-active-custom-color-1,
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-1
         {
-            color: #ffc52f !important;
-            border-color: #ffc52f !important;
+            color: #feb908 !important;
+            border-color: #feb908 !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]
         {
-            border-color: #ffc52f !important;
+            border-color: #feb908 !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]:hover
         {
-            border-color: #ffbd11 !important;
+            border-color: #eba901 !important;
         }
         
         
@@ -38913,6 +38979,54 @@ a.u-link.u-text-hover-grey-90:hover {
             border-color: #e2e2e2 !important;
         }
         
+        
+        .u-border-custom-color-4,
+        .u-separator-custom-color-4:after
+        {
+            border-color: #ffc633;
+            stroke: #ffc633;
+        }
+
+        .u-button-style.u-border-custom-color-4
+        {
+            border-color: #ffc633 !important;
+            color: #ffc633 !important;
+            background-color: transparent !important;
+        }
+
+        .u-button-style.u-border-custom-color-4:hover,
+        .u-button-style.u-border-custom-color-4:focus
+        {
+            border-color: transparent !important;
+            color: #ffbd14 !important;
+            background-color: transparent !important;
+        }
+
+        .u-border-hover-custom-color-4:hover,
+        .u-border-hover-custom-color-4:focus,
+        .u-border-active-custom-color-4.u-active.u-active,
+        a.u-button-style.u-border-hover-custom-color-4:hover,
+        a.u-button-style:hover > .u-border-hover-custom-color-4,
+        a.u-button-style.u-border-hover-custom-color-4:focus,
+        a.u-button-style.u-button-style.u-border-active-custom-color-4:active,
+        a.u-button-style.u-button-style.u-border-active-custom-color-4.active,
+        a.u-button-style.u-button-style.active > .u-border-active-custom-color-4,
+        li.active > a.u-button-style.u-button-style.u-border-active-custom-color-4
+        {
+            color: #ffc633 !important;
+            border-color: #ffc633 !important;
+        }
+
+        .u-link.u-border-custom-color-4[class*="u-border-"]
+        {
+            border-color: #ffc633 !important;
+        }
+
+        .u-link.u-border-custom-color-4[class*="u-border-"]:hover
+        {
+            border-color: #ffbd14 !important;
+        }
+        
 
         
         .u-text-custom-color-1,
@@ -38921,7 +39035,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-1,
         a.u-button-style.u-text-custom-color-1[class*="u-border-"]
         {
-            color: #ffc52f !important;
+            color: #feb908 !important;
         }
 
         a.u-button-style.u-text-custom-color-1:hover,
@@ -38933,7 +39047,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.u-text-custom-color-1.active,
         a.u-button-style.u-button-style.u-text-custom-color-1[class*="u-border-"].active
         {
-            color: #ffbd11 !important;
+            color: #eba901 !important;
         }
 
         a.u-button-style:hover > .u-text-hover-custom-color-1,
@@ -38960,7 +39074,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-1 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-1 .u-nav-link.active
         {
-            color: #ffc52f !important;
+            color: #feb908 !important;
         }
 
         .u-text-custom-color-1 .u-svg-link,
@@ -38969,17 +39083,17 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-1 .u-svg-link,
         .u-text-hover-custom-color-1:focus .u-svg-link
         {
-            fill: #ffc52f;
+            fill: #feb908;
         }
 
         .u-link.u-text-custom-color-1:hover
         {
-            color: #ffbd11 !important;
+            color: #eba901 !important;
         }
 
         a.u-link.u-text-hover-custom-color-1:hover
         {
-            color: #ffc52f !important;
+            color: #feb908 !important;
         }
         
         
@@ -39116,6 +39230,74 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-link.u-text-hover-custom-color-3:hover
         {
             color: #fbfbfb !important;
+        }
+        
+        
+        .u-text-custom-color-4,
+        li.active > a.u-button-style.u-text-custom-color-4,
+        li.active > a.u-button-style.u-text-custom-color-4[class*="u-border-"],
+        a.u-button-style.u-text-custom-color-4,
+        a.u-button-style.u-text-custom-color-4[class*="u-border-"]
+        {
+            color: #ffc633 !important;
+        }
+
+        a.u-button-style.u-text-custom-color-4:hover,
+        a.u-button-style.u-text-custom-color-4[class*="u-border-"]:hover,
+        a.u-button-style.u-text-custom-color-4:focus,
+        a.u-button-style.u-text-custom-color-4[class*="u-border-"]:focus,
+        a.u-button-style.u-button-style.u-text-custom-color-4:active,
+        a.u-button-style.u-button-style.u-text-custom-color-4[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-text-custom-color-4.active,
+        a.u-button-style.u-button-style.u-text-custom-color-4[class*="u-border-"].active
+        {
+            color: #ffbd14 !important;
+        }
+
+        a.u-button-style:hover > .u-text-hover-custom-color-4,
+        a.u-button-style:hover > .u-text-hover-custom-color-4[class*="u-border-"],
+        a.u-button-style.u-button-style.u-text-hover-custom-color-4:hover,
+        a.u-button-style.u-button-style.u-text-hover-custom-color-4[class*="u-border-"]:hover,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-4.active,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-4[class*="u-border-"].active,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-4:active,
+        a.u-button-style.u-button-style.u-button-style.u-text-hover-custom-color-4[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-text-hover-custom-color-4:focus,
+        a.u-button-style.u-button-style.u-text-hover-custom-color-4[class*="u-border-"]:focus,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-4:active,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-4[class*="u-border-"]:active,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-4.active,
+        a.u-button-style.u-button-style.u-button-style.u-button-style.u-text-active-custom-color-4[class*="u-border-"].active,
+        a.u-button-style.u-button-style.active > .u-text-active-custom-color-4,
+        a.u-button-style.u-button-style.active > .u-text-active-custom-color-4[class*="u-border-"],
+        :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-text-hover-custom-color-4:hover,
+        :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-nav-link.u-text-active-custom-color-4.active,
+        .u-text-hover-custom-color-4.u-language-url:hover,
+        .u-text-hover-custom-color-4 .u-language-url:hover,
+        .u-text-hover-custom-color-4.u-carousel-control:hover,
+        .u-popupmenu-items.u-text-hover-custom-color-4 .u-nav-link:hover,
+        .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-4 .u-nav-link.active
+        {
+            color: #ffc633 !important;
+        }
+
+        .u-text-custom-color-4 .u-svg-link,
+        .u-text-hover-custom-color-4:hover .u-svg-link,
+        .u-button-style:hover > .u-text-hover-custom-color-4 .u-svg-link,
+        .u-button-style.u-button-style.active > .u-text-active-custom-color-4 .u-svg-link,
+        .u-text-hover-custom-color-4:focus .u-svg-link
+        {
+            fill: #ffc633;
+        }
+
+        .u-link.u-text-custom-color-4:hover
+        {
+            color: #ffbd14 !important;
+        }
+
+        a.u-link.u-text-hover-custom-color-4:hover
+        {
+            color: #ffc633 !important;
         }
 
         .u-body
